# plotjuggler-video-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.py
demo/: main.cpp
docs/: ARCHITECTURE.md  EVALUATION.md  PLAN.md  RESEARCH.md  USAGE.md
include/VideoEngine/: IVideoBackend.h  PlaybackState.h  VideoController.h
src/: FFmpegBackend.cpp  FFmpegBackend.h  VideoController.cpp
src/core/: decoded_frame.cpp  decoded_frame.h  frame_buffer.cpp  frame_buffer.h  keyframe_index.cpp  keyframe_index.h  packet_queue.cpp  packet_queue.h  playback_controller.cpp  playback_controller.h  types.h  video_decoder.cpp  video_decoder.h  video_packet.h  video_source.h
src/qt/: ffmpeg_video_buffer.cpp  ffmpeg_video_buffer.h  video_widget.cpp  video_widget.h
src/sources/: file_video_source.cpp  file_video_source.h
tests/: MockVideoBackend.cpp  MockVideoBackend.h  generate_test_data.sh  test_ffmpeg_backend.cpp  test_frame_buffer.cpp  test_keyframe_index.cpp  test_packet_queue.cpp  test_robustness.cpp  test_seek.cpp  test_seeking.cpp  test_state_transitions.cpp  test_video_decoder.cpp  test_video_selection.cpp
